--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,9 @@ body {
 	font: 75% georgia, sans-serif;
 	line-height: 1.88889;
 	color: #555753; 
-	background: #fff url(https://images.pexels.com/photos/1308624/pexels-photo-1308624.jpeg?cs=srgb&dl=4k-wallpaper-architecture-background-1308624.jpg&fm=jpg); 
+	background-image: url("../images/garage.jpg"); 
+	background-repeat: no-repeat;
+	background-size: cover;
 	margin: 0; 
 	padding: 0;
 	}
